# fastapi_task

./: README.md  pyproject.toml  requirements.txt  test.db
.codesandbox/: Dockerfile
alembic/: env.py
alembic/versions/: 7e77f1a93b91_add_orders_table.py  95f50e369e5f_init.py
app/: config.py  endpoints.py  main.py  models.py  orders_queue.py  schemas.py  test_main.py
app/models/: __init__.py  customer.py  order.py
