[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "fastapi_test" }]

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
fastapi = "^0.103.2"
Jinja2 = "^3.1.2"
SQLAlchemy = "^2.0.21"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.5"
pytest = "^7.4.2"
httpx = "^0.25.0"
pydantic-settings = "^2.0.3"
pydantic = { version = "^2.4.2", extras = ["email"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
